[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Bitstream Vera Sans Mono Roman.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://IO.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[node name="IO" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="AcceptDialog" parent="."]
margin_right = 329.0
margin_bottom = 126.0
window_title = "Instructions"
dialog_text = "Use the arrow keys to steer the snake.

Eat the Apple to get points and grow the tail.

The game is over if the snake's head hits the tail."

[node name="GameOver" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "GAME OVER"
dialog_text = "Play again?"

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 15.0
margin_right = 123.0
margin_bottom = 47.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "000000"
text = "000000"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="confirmed" from="Start" to="." method="_on_Start_confirmed"]
[connection signal="confirmed" from="GameOver" to="." method="_on_GameOver_confirmed"]
